cmake_minimum_required(VERSION 3.1)
project(Grapha CXX)
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
include_directories(include)
file(GLOB sources src/*.cpp)
if(UNIX AND APPLE)
    add_definitions(-Wall -O3 -g)
    find_package(glut)
    find_package(opengl)
    add_executable(Grapha ${sources})
    target_link_libraries(Grapha ${GLUT_LIBRARY} ${OPENGL_LIBRARY} pthread)
elseif(UNIX AND NOT APPLE)
    add_definitions(-w -O3)
    add_executable(Grapha ${sources})
    target_link_libraries(Grapha glut GLU GL Xmu Xi Xext X11 m pthread)
endif()
